  result in IceSSL using a different host name than that of the proxy.
  For example, the proxy may have contained "127.0.0.1" but IceSSL
  used "localhost". This could cause the SSL connection attempt to
  fail if IceSSL.CheckCertName is enabled. IceSSL now uses the host
  name from the proxy for this validation step.


C# Changes
==========

- Added new ice_dispatch method to Object that does not take a
  DispatchInterceptorAsyncCallback paramter to be used for
  synchronous dispatch only.

- IceSSL's behavior with respect to the IceSSL.CheckCertName property
  is now consistent with that of C++ and Java. Specifically, IceSSL
  compares the host name or IP address in a proxy endpoint (if any)
  against the common name and subject alternative names of the
  server's certificate. In prior releases, IceSSL relied on .NET to
  perform the validation of the common name but no comparison was made
  with the subject alternative names.

- Fixed bug where random endpoint selection would only work for
  proxies with more than two endpoints.

- Fixed thread safety issue in random endpoint selection.

- slice2cs no longer generates a <name>OperationsNC interface for
  local interfaces and classes. This makes the code easier to browse
  with IDEs.

- slice2cs now converts javadoc comments in Slice files into Visual C#
  XML documentation comments. This allows you to generate
  an <assembly>.xml file from the documenation comments by passing the
  /doc option to Visual C#. The comments in the <assembly>.xml file
  are shown as Visual C# tooltips if the <assembly>.xml file is installed
  in the same directory as the <assembly>.dll file.

  The build for Ice now generates the <assembly>.xml file for each assembly
  and installs it, so Visual C# displays tooltips for Ice APIs.

- The generated types for Slice classes, interfaces, structs and
  exceptions are now declared as partial.

- The following APIs are deprecated and will be removed in a future 
  release.
