@@ -524,6 +524,16 @@ class ServiceManagerI : ServiceManagerDisp_
             //
             string err = "ServiceManager: unable to load service '" + entryPoint + "': ";
             int sepPos = entryPoint.IndexOf(':');
+            if(sepPos != -1)
+            {
+                if(entryPoint.Length > 3 &&
+                   sepPos == 1 &&
+                   System.Char.IsLetter(entryPoint[0]) &&
+                   (entryPoint[2] == '\\' || entryPoint[2] == '/'))
+                {
+                    sepPos = entryPoint.IndexOf(':', 3);
+                }
+            }
             if(sepPos == -1)
             {
                 FailureException e = new FailureException();
